fixed subscribe button on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,14 +28,20 @@
 }
 
 
-/*@media (min-width: 513px)  and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5),
+@media (min-width: 513px)  and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1.5),
        (min-width: 513px)  and (max-width: 1024px) and (min-resolution: 1.5dppx),
        (min-width: 1025px) and (max-width: 2048px) and (-webkit-max-device-pixel-ratio: 1.5),
        (min-width: 1025px) and (max-width: 2048px) and (max-resolution: 1.5dppx)  {
-  body::before {
+  /*body::before {
     background-image: url('{{ site.url }}/images/backgroud1-medium.jpeg');
+  }*/
+  .subscription-button {
+    display: inline-block !important;
   }
-}*/
+  .subscription-form {
+    display: none !important;
+  }
+}
 
 
 /*@media (min-width: 1025px) and (-webkit-min-device-pixel-ratio: 1.5),
